{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 27,
  "lineage": "a3bc17f0-ccdb-d33c-6866-669f266b07d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "airflow_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a98573e58903ee0",
            "arn": "arn:aws:ec2:us-east-1:564443450717:instance/i-0d510cd42fa4d9b9c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mlops_ec2_profile",
            "id": "i-0d510cd42fa4d9b9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mlopskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b06a2c76772506dd",
            "private_dns": "ip-10-0-1-167.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-18-208-231-130.compute-1.amazonaws.com",
            "public_ip": "18.208.231.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ead9cd86ed85bff",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0936b7f68fd290d95",
            "tags": {
              "Environment": "production",
              "Name": "mlops-ec2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mlops-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00f36e932ebab4ab1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.mlops_ec2_profile",
            "aws_iam_role.mlops_ec2_role",
            "aws_key_pair.mlops_key",
            "aws_security_group.mlops_ec2_sg",
            "aws_subnet.mlops_public_subnet",
            "aws_vpc.mlops_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mlops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564443450717:internet-gateway/igw-012491a7ab39f67b2",
            "id": "igw-012491a7ab39f67b2",
            "owner_id": "564443450717",
            "tags": {
              "Environment": "production",
              "Name": "mlops-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mlops-igw"
            },
            "vpc_id": "vpc-0a3594288f0ab7937"
          },
          "dependencies": [
            "aws_vpc.mlops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-012491a7ab39f67b2",
            "id": "r-rtb-0268fa1a1f7bbed231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0268fa1a1f7bbed23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mlops_igw",
            "aws_route_table.mlops_public_rt",
            "aws_vpc.mlops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mlops_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564443450717:route-table/rtb-0268fa1a1f7bbed23",
            "id": "rtb-0268fa1a1f7bbed23",
            "owner_id": "564443450717",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012491a7ab39f67b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "mlops-pub_rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mlops-pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3594288f0ab7937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mlops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mlops_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b0ba0581906ae5d",
            "route_table_id": "rtb-0268fa1a1f7bbed23",
            "subnet_id": "subnet-0936b7f68fd290d95"
          },
          "dependencies": [
            "aws_route_table.mlops_public_rt",
            "aws_subnet.mlops_public_subnet",
            "aws_vpc.mlops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mlops_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564443450717:security-group/sg-00f36e932ebab4ab1",
            "description": "mlops security group for ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f36e932ebab4ab1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "mlops-ec2_sg",
            "name_prefix": "",
            "owner_id": "564443450717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "mlops-ec2_sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mlops-ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3594288f0ab7937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mlops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mlops_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564443450717:security-group/sg-00fb04e667a89755d",
            "description": "mlops security group for rds instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fb04e667a89755d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f36e932ebab4ab1"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mlops-rds_sg",
            "name_prefix": "",
            "owner_id": "564443450717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "mlops-rds_sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mlops-rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3594288f0ab7937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mlops_ec2_sg",
            "aws_vpc.mlops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mlops_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564443450717:subnet/subnet-0f3e1a658f436c695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3e1a658f436c695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "564443450717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "mlops-pri_subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mlops-pri_subnet"
            },
            "vpc_id": "vpc-0a3594288f0ab7937"
          },
          "dependencies": [
            "aws_vpc.mlops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mlops_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564443450717:subnet/subnet-0936b7f68fd290d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0936b7f68fd290d95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564443450717",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "mlops-pub_subnet"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mlops-pub_subnet"
            },
            "vpc_id": "vpc-0a3594288f0ab7937"
          },
          "dependencies": [
            "aws_vpc.mlops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mlops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:564443450717:vpc/vpc-0a3594288f0ab7937",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00199354cfff13466",
            "default_route_table_id": "rtb-02febb091b33b8ddf",
            "default_security_group_id": "sg-024777e54725a34c4",
            "dhcp_options_id": "dopt-02167f2b51186515c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3594288f0ab7937",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02febb091b33b8ddf",
            "owner_id": "564443450717",
            "tags": {
              "Environment": "production",
              "Name": "mlops-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mlops-vpc"
            }
          }
        }
      ]
    }
  ]
}